fix(calendar-weekly): Realign positioning of selected cells
Readjust the positioning of selected cells within the CalendarWeekly component. This fix addresses any misalignment or positioning issues, ensuring proper display and layout of selected elements.

--- a/react/src/styles/calendar/calendar-weekly.css
+++ b/react/src/styles/calendar/calendar-weekly.css
@@ -115,7 +115,7 @@
   font-weight: 700;
   top: 0;
   left: 0;
-  transform: translate(5%, -50%);
+  transform: translate(5%, -5%);
   width: 90%;
   height: 100%;
   background-color: rgb(114 122 196 / 78%);
@@ -125,6 +125,7 @@
   font-weight: 500;
 }
 .second-half .clicked-new-task-modal {
+  transform: translate(5%, -50%);
   top: 100%;
   z-index: 1;
 }
